# runderer

./: CMakeLists.txt  Makefile  README.md  main.c
include/: framebuffer.h  gl.h  glapi.h  matrix.h  runderer.h  vector.h  vector_math.h
include/framebuffer/: framebuffer_sdl.h
math/: math.c
sdl-framebuffer/: Makefile  framebuffer.c  framebuffer.h  test.c
src/: framebuffer.c  gl.c  glapi.c  math.c  math.h  matrix.c  rasterizer.c  rasterizer.h  runderer.c  vector_math.c
src/framebuffer/: framebuffer_sdl.c
vertex/: vertex.h
xframebuffer/: Makefile  framebuffer.c  framebuffer.h  test.c
